--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.1",
     "font-awesome-loader": "^1.0.2",
+    "image-webpack-loader": "^3.3.1",
     "imports-loader": "^0.7.1",
     "lint-staged": "^4.0.0",
     "node-sass": "^4.5.3",
@@ -69,6 +70,7 @@
     "bootstrap": "v4.0.0-alpha.6",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "rimraf": "^2.6.1",
     "tether": "^1.4.0"
   }
 }
