--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "instafeed.js": "^1.4.1",
     "jquery": "^3.2.1",
     "rimraf": "^2.6.1",
+    "skrollr": "^0.6.26",
     "slick-carousel": "^1.6.0",
     "tether": "^1.4.0"
   }
