--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   },
   "dependencies": {
     "bootstrap": "v4.0.0-alpha.6",
+    "debounce": "^1.0.2",
     "font-awesome": "^4.7.0",
     "instafeed.js": "^1.4.1",
     "jquery": "^3.2.1",
